# HoodBot

./: Cargo.toml  README.md  flake.nix  install
src/: main.rs  roulette.rs  search.rs
