[package]
name = "hoodbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = {version = "1.20.1", features = ["full"]}
songbird = {version = "0.3.2", features = ["serenity-rustls", "gateway", "yt-dlp", "builtin-queue"]}
reqwest = "0.11.11"
d20 = "0.1.0"

